<resources>
    <string name="app_name" translatable="false">BUDGETT APP</string>
    <string name="EntryType">Entry Type</string>
    <string name="Expense">Expense</string>
    <string name="Income">Income</string>
    <string name="Date">Date</string>
    <string name="Category">Category</string>
    <string name="Source">Source</string>
    <string name="CurrencyCode">Currency Code</string>
    <string name="Amount">Amount</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Login">Login</string>
    <string name="Delete">Delete</string>
    <string name="Reset">Reset</string>
    <string name="New">New</string>
    <string name="Set">Set</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Mail">e-mail</string>
    <string name="MailAddress" translatable="false">bilgi@okanerkan.com</string>
    <string name="UseDate">Use Date</string>
    <string name="PickADate">Pick a Date</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="Note">Note</string>
    <string name="Filter">Filter</string>
    <string name="All">All</string>

    <string name="LabelBudgettSource">BUDGETT Source</string>
    <string name="LabelBudgettCategory">BUDGETT Category</string>
    <string name="LabelBudgettSources">BUDGETT Source List</string>
    <string name="LabelBudgettCategories">BUDGETT Category List</string>
    <string name="LabelLogin">BUDGETT Login</string>
    <string name="LabelReports">BUDGETT Report</string>
    <string name="LabelUserSettings">BUDGETT Settings</string>

    <string name="MenuItemFacebook" translatable="false">Facebook</string>
    <string name="MenuItemCategory">Category</string>
    <string name="MenuItemSource">Source</string>
    <string name="MenuItemReport">Reports</string>
    <string name="MenuItemWebsite">Website</string>
    <string name="MenuItemSettings">Settings</string>
    <string name="MenuItemLogout">Logout</string>
    <string name="MenuGroupContact">Contact</string>
    <string name="SideMenuOpen">Open Menu</string>
    <string name="SideMenuClose">Close Menu</string>

    <string name="MSGCannotDelete">Cannot be deleted</string>
    <string name="MSGSaved">Save successful</string>

    <string name="Today">Today</string>
    <string name="Yesterday">Yesterday</string>
    <string name="ThisWeek">This Week</string>
    <string name="LastWeek">Last Week</string>
    <string name="ThisMonth">This Month</string>
    <string name="LastMonth">Last Month</string>
    <string name="LastThreeMonths">Last 3 Months</string>

</resources>
