<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.okanerkan.budgettapp.BudgettReportActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:drawable/dialog_holo_light_frame" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="horizontal"
            android:padding="4dp"
            android:background="#333" >

            <ImageView
                android:id="@+id/imgEntryType"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="#333"/>

            <TextView
                android:id="@+id/txtEntryDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:lines="3"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#fff"
                android:text="@string/Date"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/txtSource"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:lines="3"
                android:gravity="center_vertical"
                android:textColor="#fff"
                android:text="@string/Source"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txtType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:lines="3"
                android:gravity="center_vertical"
                android:textColor="#fff"
                android:text="@string/Category"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:lines="3"
                android:gravity="center_vertical|end"
                android:textColor="#fff"
                android:text="@string/Amount"
                android:layout_marginStart="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <include
                layout="@layout/filter_control_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/ListViewReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="5dp">

            </ListView>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>