<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.okanerkan.budgettapp.BudgettAppActivity"
    tools:showIn="@layout/app_bar_budgett_app">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/LayoutTopBlock"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@android:drawable/dialog_holo_light_frame" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_block_bg" />

                <RelativeLayout
                    android:id="@+id/LayoutTopBlockInner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:id="@+id/LayoutTopBlockLine1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">

                        <ImageView
                            android:id="@+id/imgIncome"
                            android:src="@drawable/up_arrow"
                            android:contentDescription="@string/app_name"
                            style="@style/SmallImage" />

                        <TextView
                            android:id="@+id/lblIncome"
                            android:text="@string/Income"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            style="@style/HeaderLayoutItem" />

                        <TextView
                            android:id="@+id/lblIncomeValue"
                            android:text="100.00 €"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewEnd"
                            android:layout_marginLeft="20dp"
                            style="@style/HeaderLayoutItem" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LayoutTopBlockLine2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@id/LayoutTopBlockLine1">

                        <ImageView
                            android:id="@+id/imgExpense"
                            android:src="@drawable/down_arrow"
                            android:contentDescription="@string/app_name"
                            style="@style/SmallImage" />

                        <TextView
                            android:id="@+id/lblExpense"
                            android:text="@string/Expense"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            style="@style/HeaderLayoutItem" />

                        <TextView
                            android:id="@+id/lblExpenseValue"
                            android:text="60.00 €"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:textAlignment="viewEnd"
                            style="@style/HeaderLayoutItem" />

                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/LayoutMiddleBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/LayoutTopBlock"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:background="@android:drawable/dialog_holo_light_frame" >

                <LinearLayout
                    android:id="@+id/LayoutLeftSizeControls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/lblEntryType"
                        android:text="@string/EntryType"
                        style="@style/LayoutItem" />

                    <TextView
                        android:id="@+id/lblBudgettDate"
                        android:text="@string/Date"
                        style="@style/LayoutItem" />

                    <TextView
                        android:id="@+id/lblBudgettSource"
                        android:text="@string/Source"
                        style="@style/LayoutItem" />

                    <TextView
                        android:id="@+id/lblBudgettType"
                        android:text="@string/Category"
                        style="@style/LayoutItem" />

                    <TextView
                        android:id="@+id/lblAmount"
                        android:text="@string/Amount"
                        style="@style/LayoutItem" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:id="@+id/LayoutRightSizeControls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_weight="2">

                    <com.okanerkan.ui.KnRadioGroup
                        android:id="@+id/rdgEntryType"
                        android:orientation="horizontal"
                        android:tag="EntryType"
                        style="@style/LayoutControl" >

                        <RadioButton
                            android:id="@+id/rbtnExpense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/Expense"
                            android:tag="0"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/rbtnIncome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Income"
                            android:tag="1"
                            android:textSize="12sp" />

                    </com.okanerkan.ui.KnRadioGroup>

                    <com.okanerkan.ui.DateEditText
                        android:id="@+id/txtEntryDate"
                        android:focusable="false"
                        android:clickable="true"
                        android:tag="EntryDate"
                        style="@style/LayoutControl" />

                    <Spinner
                        android:id="@+id/spnBudgettSource"
                        android:tag="SourceID"
                        style="@style/LayoutControl" />

                    <Spinner
                        android:id="@+id/spnExpenseType"
                        android:tag="CategoryID"
                        style="@style/LayoutControl" />

                    <EditText
                        android:id="@+id/txtAmount"
                        android:inputType="numberDecimal"
                        android:gravity="end"
                        android:textAlignment="textEnd"
                        android:tag="Amount"
                        android:hint="0.00"
                        android:selectAllOnFocus="true"
                        style="@style/LayoutControl" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutBottomBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/LayoutMiddleBlock">

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Reset"
                    android:layout_weight="2"
                    android:focusableInTouchMode="true"
                    style="@style/NegativeButton"/>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    style="@style/PositiveButton"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
